2008-01-07 18:37-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Minor issues corrected with c99
	changes.

2008-01-07 17:40-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormDrawerAttributesInspector.gorm:
	Fixed issue with dropdown.
	* Palettes/2Controls/GormButtonEditor.m: Fixed minor resize issue.

2008-01-05 Riccardo Mottola <riccardo@kaffe.org>
	* GormCore/GormWrapperBuilder.m: removed some c99-isms
	
2008-01-04 Riccardo Mottola <riccardo@kaffe.org>
	* GormCore/GormGormWrapperLoader.m: removed some c99-isms
	* GormCore/GormNibWrapperLoader.m: removed some c99-isms

2008-01-04 18:38-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewWindow.m: Try to get the editor for the 
	standalone view and activate it.

2008-01-04 13:22-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/Gorm.gorm: Changed delete to require command,
	it was causing issues with editing text fields.
	* English.lproj/GormScrollViewAttributesInspector.gorm
	* GormCore/GormScrollViewAttributesInspector.h
	* GormCore/GormScrollViewAttributesInspector.m: Added ruler switches
	to inspector.

2008-01-04 12:05-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m
	* GormLib/IBDocuments.h: Addition of private methods for bug#17892.

2008-01-03 20:39-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGenericEditor.m: Reformed and applied patch provided
	by Sergey Golovin.  Corrects bug#17539.

2008-01-03 20:17-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/Gorm.gorm: Added menu shortcut for delete/backspace
	to correct bug#15637.

2008-01-03 20:02-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Corrections for bug#19792.  
	Nib loader connector logic modified to correct this issue.

2008-01-03 19:40-EST Gregory John Casamento <greg_casamento@yahoo.com>
